--- a/codes/iris/causal_iris.ipynb
+++ b/codes/iris/causal_iris.ipynb
@@ -520,8 +520,11 @@
         "            expected_value += (1.0/counter)*(val - expected_value)\n",
         "            counter += 1\n",
         "        baseline_expectation_do_x.append(expected_value)\n",
+        "        if not os.path.exists('ACE'):",
+        "           os.mkdir('ACE')",
         "        with open('ACE/expectation_do_x_for_cause_'+str(t) + \"_and_effect_\" + str(output_index), 'wb') as fp:\n",
         "            pickle.dump(expectation_do_x, fp)\n",
+        "",
         "        with open('ACE/baseline_expectation_do_x_for_cause_'+str(t) + \"_and_effect_\" + str(output_index), 'wb') as fp:\n",
         "            pickle.dump(baseline_expectation_do_x, fp)"
       ],
